--- a/package.json
+++ b/package.json
@@ -2,22 +2,20 @@
   "name": "react-focus-manager",
   "version": "0.1.0",
   "private": true,
-  "source": "src/index.html",
   "scripts": {
-    "build": "parcel build",
-    "start": "parcel"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "build": "vite build",
+    "start": "vite"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "parcel": "^2.12.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.5.4",
-    "typescript-plugin-css-modules": "^5.1.0"
+    "typescript-plugin-css-modules": "^5.1.0",
+    "vite": "^5.4.2"
   },
   "prettier": {
     "singleQuote": true
